--- a/.github/TEST_workflows/main.yml
+++ b/.github/TEST_workflows/main.yml
@@ -1,23 +1,19 @@
-name: whatsapp-bot-release
+name: your-service-release
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
 
 jobs:
   gitPull:
     runs-on: self-hosted
-    #    defaults:
-    #      run:
-    #        working-directory: ./opt/hobbies/hobbiesBck
     steps:
       - uses: actions/checkout@v3
       - name: ActionsSetup
         uses: actions/setup-node@v3
 
       - name: Location
-        # working-directory: ../../../../Projects/webhookserverwrapper
         run: |
           pwd
         # npm i
         # git pull # Cannot Do this because of Git ssh credentials in server
-        # pm2 start WTP_BOT
+        # pm2 start YOUR_SERVICE
