--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+.DS_Store
+*.log
+.idea
+coverage
+.nyc_output
+yarn.lock
+
+Thumbs.db
+tmp/
+temp/
+*.lcov
+lib
+dist
+
 #Documentos de integracion del Servicio
 Docs/
 /Docs/
@@ -23,8 +37,10 @@ pids
 *.pid
 *.seed
 
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directory
 node_modules
+package-lock.json
